# vcpkg_base

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: CMakeLists.txt  CREDIT.md  CompilerOptions.cmake  CompilerWarnings.cmake  Sanitizers.cmake  VcpkgSetup.cmake
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
